--- a/style.css
+++ b/style.css
@@ -1,70 +1,116 @@
-
-.amazon{
-    background-color: rgb(255,216,20);;
-    color: hsl(0, 0%, 0%);
-    border: none;
-    border-radius: 15px;
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-family: arial;
-    cursor: pointer;
-    transition: 0.15s background-color;
-    margin-right:20px;
-    margin:10px;
-    margin-top:-10px;    
-}
-.amazon:hover{
-       opacity:0.9;
-}
-.amazon:active{
-    background-color: aqua;
-}
-.uber{
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@300&display=swap');
+body{
+    margin:0;
     background-color: black;
-    color:white;
-    padding-left:20px;
-    padding-right:20px;
-    padding-top:10px;
-    padding-bottom: 10px;
-    border:none;
-    cursor: pointer;
-    transition: box-shadow 0.15s;
-    border-radius:6px;
-    margin-left:20px;
+    color: white;
     
 }
-.uber:hover{
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.15)
+.navbar{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    background-color: black;
 }
-.uber:active{
-    background-color:whitesmoke;
+.navbar-left{
+   padding: 50px;  
 }
-.image{
-    margin-left:10px;
-    padding-left:10px;
-    margin-right: 10px;
-    margin-top:10px;
-    margin-bottom:10px;
+.logo{
+    height: 100px;
+    width: 100px;
 }
-.uber-image{
+.navbar-right{
+    padding-right: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.a-element{
+    border: 2px;
+    padding: 10px;
+    margin: 7px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+}
+.container{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+   justify-content: space-between;
+   height: 80vh;
+ 
+}
+.container-left{
+    padding:20px;
+    width: 50vw;
+    text-align: right;
+    padding-left: 200px;
+}
+.img{
+    width: 300px;
+    padding: 100px;
+    height: 300px;
 
-    padding-left:285px;
-    padding-right:-65px;
-    padding-top:65px;
-    padding-bottom:20px;
-    border:20px;
-    margin-top:10px;   
 }
-.uber-img{
-    height: 50px;
-    margin-bottom: -65px;
-    margin-left: -45px;
+.r1{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
 }
-.amz-img{
-    height: 50px;
-    margin-left: 50px;
-    margin-top: -20px;
-    
+.p{
+    font-family: 'Encode Sans', sans-serif;
+    font-size: 20px;
+}             
+.services{
+    padding: 50px;
+    text-align: center;
+    font-style: italic;
+}
+.h1{
+    font-family: 'Ubuntu',sans-serif;
+    -webkit-text-stroke: 2px;
+    -webkit-text-stroke-color: yellow;
+    color: white;
+    letter-spacing: 4px;
+    transition: all ease 0.2s;
+    cursor: pointer;
+}
+.h1:hover{
+    color: red;
+}
+.service-in-java{
+    display:flex;
+    flex-direction: row;
+}
+.service-card{
+    border: 2px solid green;
+    margin: 7px;
+    padding: 20px;
+    margin-left: 150px;
+    width:400px;
+}
+.sc-h1{
+    font-family: 'Montserrat',sans-serif;
+    font-size: 27px;
+    padding: 20px;
+    text-align: center;
+}
+.sc-p{
+    font-family: 'Encode Sans',sans-serif;
+    font-size: 20px;
+}
+.contact{
+    text-align: center;
+}
+.contact-info{
+     font-family: 'Montserrat',sans-serif;
+     font-size: 20px;
+}
+.social-icon-img{
+    height: 60px;
+}
+.tst-icon{
+    height: 40px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
